[package]
name = "embassy-preempt"
authors = ["nostalgia <lv15623448685@gmail.com>"]
edition.workspace = true

[dependencies]
axstd = { workspace = true, features = [
	"multitask",
	"sched_cfs",
	"alloc",
], optional = true }
axasync = { workspace = true, features = ["preempt", "time"] }

log = "=0.4.21"
