[package]
name = "axmacros"
version.workspace = true
edition.workspace = true
authors = ["nostalgia <lv15623448685@gmail.com>"]
license.workspace = true
homepage.workspace = true

[dependencies]
proc-macro-crate = "3.3.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.102", features = ["full"] }

[lib]
proc-macro = true
